# herbatka

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  herbatka.toml
.github/workflows/: ci.yml
assets/diagrams/mmd/: architecture-overview.mmd  fleet-ui-draft.mmd  logical-channels-lanes.mmd  logical-channels-topics.mmd  persistence-recovery.mmd  produce-path.mmd  replay-segment-recovery.mmd  request-flow.mmd  simulator-load-flow.mmd  source-of-truth-rebuild.mmd
docs/: benchmarks.md  how.md  logical-channels.md  roadmap.md  simulator.md  status.md  tcp-wire-protocol.md  test-harness.md  ui-draft.md  what.md  why.md
proto/: herbatka_fleet.proto
scripts/: startup_ab_speed.ps1  startup_ab_speed.sh  startup_replay_bench.ps1  startup_replay_bench.sh
src/: config.rs  generated_schemas.rs  lib.rs  main.rs  observability.rs
src/broker/: checkpoint.rs  core.rs  index.rs  mod.rs  startup.rs
src/broker/core/: checkpoint_io.rs  public_api.rs  retention.rs  segment_fetch.rs  startup_discovery.rs  topic_paths.rs
src/broker/core/startup_discovery/: discover.rs  fallback.rs  load_topic.rs  mod.rs  segment_scan.rs  tail_seek.rs
src/log/: log.rs  message.rs  mod.rs  persistence.rs  store.rs
src/tcp/: command.rs  frame.rs  mod.rs  protocol.rs  server.rs
src/ui/: app.rs  broker_client.rs  broker_subprocess.rs  child_output.rs  fleet_stats.rs  mod.rs  model.rs  process_log.rs  simulator_subprocess.rs
tests/: broker_persistence.rs  consumer_flow.rs  fleet_protobuf_roundtrip.rs  persistence_flow.rs  tcp_server_smoke.rs
