[package]
name = "herbatka"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
eframe = "0.33.3"
egui = "0.33.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

